--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,8 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:spring/applicationContext.xml
+			classpath*:spring/applicationContext.xml,
+            classpath*:spring/applicationContext-security3.1.xml
 		</param-value>
 	</context-param>
 
@@ -35,16 +36,16 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 <!-- 	配置spiring security   -->
-<!--     <filter>   -->
-<!--         <filter-name>springSecurityFilterChain</filter-name>   -->
-<!--         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>   -->
-<!--     </filter>   -->
-<!--     <filter-mapping>   -->
-<!--         <filter-name>springSecurityFilterChain</filter-name>   -->
-<!--         <url-pattern>/*</url-pattern>   -->
-<!--     </filter-mapping>   -->
+     <filter>
+         <filter-name>springSecurityFilterChain</filter-name>
+         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+     </filter>
+     <filter-mapping>
+         <filter-name>springSecurityFilterChain</filter-name>
+         <url-pattern>/*</url-pattern>
+     </filter-mapping>
 <!-- 	配置spiring security结束   -->
 	
 	<!-- spring mvc -->
