--- a/src/main/resources-dev/properties/jdbc.properties
+++ b/src/main/resources-dev/properties/jdbc.properties
@@ -1,10 +1,10 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/dingmei
+jdbc.url=jdbc:mysql://localhost:3306/dingmei?useUnicode=true&characterEncoding=utf8
 jdbc.username=zhengzc
 jdbc.password=zhengzc123
-initialSize=5
-maxActive=50
-minIdle=5
-maxIdle=10
-maxWait=10
+initialSize=1
+maxActive=5
+minIdle=1
+maxIdle=5
+maxWait=1
 validationQuery=select 1
