--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,9 +67,14 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
+    <!--<error-page>-->
+        <!--<error-code>500</error-code>-->
+        <!--<location>/error.jsp</location>-->
+    <!--</error-page>-->
+
 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config>
-         
+
 </web-app>
 
